--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -143,7 +143,7 @@
 								</div>
 							</div>
 							<div class="u-center">
-								<button class="am-View-button expand u-margin-top-20">COMPRAR</button>
+								<button class="am-View-button expand u-margin-top-20 buy-btn">COMPRAR</button>
 							</div>
 						</div>
 					</div>
@@ -189,7 +189,8 @@
 								</div>
 							</div>
 							<div class="u-center">
-								<button class="am-View-button expand u-margin-top-20 buy">COMPRAR</button>
+								<a href='/user/{{element.User.username}}/product/{{element.nameSlugify}}/buy' class="am-View-button expand u-margin-top-20 buy-btn">COMPRAR</a>
+								<!-- <button class="am-View-button expand u-margin-top-20 buy">COMPRAR</button> -->
 							</div>
 						</div>
 					</div>
