--- a/app/views/user/cart/buy.html
+++ b/app/views/user/cart/buy.html
@@ -20,7 +20,7 @@
 								<div class="checkout-info">
 									<div class="u-separator"></div>
                   <div class="product-card">
-                    <a href="/user/{{product.username}}/product/{{product.nameSlugify}}">
+                    <a href="/user/{{product.User.username}}/product/{{product.nameSlugify}}">
                       <div class="product-card-image" style="background-image: url('{{product.photo|addFilter('w_300,h_300,c_fill')}}')"></div>
                       <div class="product-card-data">
                         <p>{{product.name}}</p>
