add max width to product card

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -451,6 +451,8 @@ body
 .product-card
 	border solid 1px #ddd
 	position relative
+	max-width: 250px;
+	margin: auto;
 	&-image
 		background-size cover
 		background-position center center
