--- a/app/views/user/cart/buy.html
+++ b/app/views/user/cart/buy.html
@@ -19,7 +19,7 @@
 							<div class="grid-70">
 								<div class="checkout-info">
 									<div class="u-separator"></div>
-                  <div class="product-card">
+                  <div class="product-card u-margin-top-20">
                     <a href="/user/{{product.User.username}}/product/{{product.nameSlugify}}">
                       <div class="product-card-image" style="background-image: url('{{product.photo|addFilter('w_300,h_300,c_fill')}}')"></div>
                       <div class="product-card-data">
@@ -35,7 +35,7 @@
 								</div>
 							</div>
 							<div class="grid-30">
-								<div class="checkout-resume">
+								<div class="checkout-resume u-margin-top-20 ">
 									<div class="resume-box u-padding-bottom-10">
 										<header>RESUMEN DE LA ORDEN</header>
 										<section>
