add clickable artist name in single work

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -656,10 +656,14 @@ body
 		font-size 12px
 		color #666666
 		letter-spacing .5px
+		line-height: 1.25;
 		&.big
 			font-size 15px
 			font-weight bold
 			letter-spacing 2px
+	a:hover
+		p:first-child
+			text-decoration underline
 
 
 .am-Single-text
