--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -79,7 +79,9 @@
 				<div class="single-data u-padding-bottom-40">
 					<div class="FollowArtist u-padding-bottom-10">
 						<div>
-							<p class="u-padding-bottom-7 big uppercase"><strong>{{element.User.fullname}}</strong></p>
+							<a href="#">
+								<p class="u-padding-bottom-7 big uppercase"><strong>{{element.User.fullname}}</strong></p>
+							</a>
 							{% if !owner %}
 								<button class="am-Follow-button">+ SEGUIR</button>
 							{% endif %}
@@ -228,8 +230,10 @@
 	              <img src="{{element.User.photo}}">
 	            </a>
 	            <div>
-	              <p class="u-padding-bottom-4 uppercase" style="font-weight: bold;">{{element.User.fullname}}</p>
-	              <p class="u-padding-bottom-7"> <strong></strong> {{element.User.city}}, {{element.User.country}}</p>
+	            	<a href="#">
+		              <p class="u-padding-bottom-4 uppercase" style="font-weight: bold;">{{element.User.fullname}}</p>
+		              <p class="u-padding-bottom-7"> <strong></strong> {{element.User.city}}, {{element.User.country}}</p>
+	            	</a>
 	              {% if !owner %}
 	              <button class="am-Follow-button">+ SEGUIR</button>
 	              {% endif %}
