add new upupload button design

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -236,6 +236,7 @@
 	            	</a>
 	              {% if !owner %}
 	              <button class="am-Follow-button">+ SEGUIR</button>
+	              <button class="am-Follow-button following">+ SEGUIR</button>
 	              {% endif %}
 	            </div>
 	          </div>
