--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1476,12 +1476,14 @@ body
 	.button
 		border-radius 4px
 		font-weight bold
-		letter-spacing 2px
 		width 100%
+		letter-spacing 2px
 		font-size 10px
 		color white
 		padding 15px 20px
 		cursor pointer
+		font-family 'Montserrat', sans-serif !important
+		font-size 9.85px
 		i
 			font-size 1.25em
 			animation 1.5s load infinite
@@ -1656,6 +1658,8 @@ body
 		color white
 		padding 15px 20px
 		cursor pointer
+		font-family 'Montserrat', sans-serif !important
+		font-size 9.85px
 		.load
 			font-size 1.2em
 			animation 1.5s load infinite
