--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -88,7 +88,7 @@
 						</div>
 					</div>
 					<div class="u-separator"></div>
-					<p class="am-Single-title-text u-margin-top-15" style="font-size: 15px;">{{element.description}}</p>
+					<p class="am-Single-title-text u-margin-top-15" style="font-size: 15px;">{{element.name}}</p>
 					<p class="am-collection-desc u-margin-top-10">
 						{{element.description}}
 					</p>
