--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -30,12 +30,12 @@
 							<p>OBRAS</p><i class="bi_editorial-brush"></i>
 						</a>
 					</li>
-					<li class="am-Header-menu-item">
+					<!-- <li class="am-Header-menu-item">
 						<a class="am-Header-text desktop" href="/products/type/all/page-1?order=popularity">
-							<!-- <p>TIENDA</p><i class="fa fa-diamond"></i> -->
+							<p>TIENDA</p><i class="fa fa-diamond"></i>
 							<p>TIENDA</p><i class="bi_ecommerce-diamon"></i>
 						</a>
-					</li>
+					</li> -->
 					{% if user %}
 						<li class="am-Header-menu-item upload">
 							<a class="am-Upload-button" href="/user/{{user.username}}/work/add"><i class="fa fa-cloud-upload"></i> SUBIR</a>
