--- a/app/views/errors/404.html
+++ b/app/views/errors/404.html
@@ -1,10 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Error 404</title>
-</head>
-<body>
-<h1>404</h1>
-</body>
-</html>
+{% extends '../partials/base.html' %}
+
+{% block elements %}
+
+
+
+
+{% endblock %}
