--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2521,6 +2521,46 @@ body
 		align-items center
 
 
+
+/*------------------------------------*
+	$ 404
+*------------------------------------*/
+.error-404
+	background-size: cover;
+	background-position: center center;
+	min-height: 700px;
+	display flex
+	padding 20px
+	text-align center
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 40px
+		color white
+	.desc
+		font-family: 'PT Serif', serif;
+		font-size 24px
+		color #eeeeee
+		padding-top 30px
+	a
+		background #277cea
+		color white
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 10px
+		padding 10px 30px
+		border-radius 40px
+		margin-top 30px
+		display: inline-block
+		letter-spacing 2.5px
+
+	.inner
+		margin auto
+		// display flex
+		// align-items center
+		// justify-content center
+
+
 @keyframes load
 	0%
 		transform rotate(0)
