--- a/app/views/errors/404.html
+++ b/app/views/errors/404.html
@@ -2,7 +2,16 @@
 
 {% block elements %}
 
+	<div class="error-404" style="background-image: url('/img/404.png')">
+	<!-- <div class="error-404" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/c_limit,w_1600/general/am-cover.jpg')"> -->
+		<div class="inner">
+			<p class="title">Error 404</p>
+			<p class="title">Lo setimos pagina no encontrada</p>
 
+			<p class="desc">Pero existen cientos de obras aún por descubrir</p>
+			<a href="">DESCRUBRIR OBRAS</a>
+		</div>
+	</div>
 
 
 {% endblock %}
