--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -2,4 +2,283 @@
 
 {% block elements %}
 
+
+
+
+<div class="grid work-layout-discover" style="position: relative; height: 1855px;">
+	<div class="grid-sizer"></div>
+	<div class="grid-item" style="position: absolute; left: 0%; top: 0px;">
+    <div class="artist-card">
+      <a href="/user/cesarardiles">
+        <div class="artist-card-info">
+          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_cesarardiles.jpg">
+          <div>
+            <p class="name uppercase">CèsarArdiles</p>
+            <p class="city">, </p>
+            <p class="stats"><i class="bi_ecommerce-diamon"></i> 0</p>
+          </div>
+        </div>
+      </a>
+      <div class="artist-card-works">
+        <a href="/user/cesarardiles/work/mujer" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/135007e7085979a7d5b41ce54c0e54d7.jpg')"></a>
+        <a href="/user/cesarardiles/work/mujer2" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/2de40e0d504f583cda7465979f958a98.jpg')"></a>
+        <a href="/user/cesarardiles/work/mujer3" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/f99687dd719c4e8bc6a39e946c3d9ef7.jpg')"></a>
+        <a href="/user/cesarardiles/work/ignacio" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/3fb5ed13afe8714a7e5d13ee506003dd.jpg')"></a>
+      </div>
+      <div class="artist-card-follow">
+
+          <button class="am-Follow-button">+ SEGUIR</button>
+
+      </div>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 0px;">
+    <div class="artist-card">
+      <a href="/user/humbertosaldarriaga">
+        <div class="artist-card-info">
+          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_humbertosaldarriaga.jpg">
+          <div>
+            <p class="name uppercase">HUMBERTO JOSÉSALDARRIAGA PÉREZ</p>
+            <p class="city">Maynas/Piura/Lima, PE</p>
+            <p class="stats"><i class="bi_ecommerce-diamon"></i> 1</p>
+          </div>
+        </div>
+      </a>
+      <div class="artist-card-works">
+            <a href="/user/humbertosaldarriaga/work/mi-ojo-rojo-al-natural" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/f59e7288e52756f4ffde1f1f16182d3b.jpg')"></a>
+            <a href="/user/humbertosaldarriaga/work/ese-corazón-se-escapó-de-una-prisión-femenina" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/414e6355008d2d9cd031537a2be7854d.jpg')"></a>
+            <a href="/user/humbertosaldarriaga/work/bienvenido-a-la-dimensión-desconocida" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/b598e3fd1f7809d7dd8667bff4d418a9.jpg')"></a>
+            <a href="/user/humbertosaldarriaga/work/dos-gorditos-se-cruzan-en-el-camino-de-su-destino-rodeado-por-avispas" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/fa3d82f8a5e13e4e33b2a5a096d8b06d.jpg')"></a>
+      </div>
+      <div class="artist-card-follow">
+
+          <button class="am-Follow-button">+ SEGUIR</button>
+
+      </div>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 0px;">
+    <div class="artist-card">
+      <a href="/user/diegorossell">
+        <div class="artist-card-info">
+          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
+          <div>
+            <p class="name uppercase">diegorossell</p>
+            <p class="city">Lima, PE</p>
+            <p class="stats"><i class="bi_ecommerce-diamon"></i> 0</p>
+          </div>
+        </div>
+      </a>
+      <div class="artist-card-works">
+            <a href="/user/diegorossell/work/cabeza1" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/0902313559edeedec1211530492fc848.jpg')"></a>
+            <a href="/user/diegorossell/work/cabeza-2" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/032e78166374ca6534b1afded4b00326.jpg')"></a>
+            <a href="/user/diegorossell/work/quien-se-corto-mi-rocoto" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/9c3974edf227b619b0908848a0dcc33a.jpg')"></a>
+            <a href="/user/diegorossell/work/ya-perdiste-fontanero" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/36acbe38f92f8a7d918f22fa9c0be656.jpg')"></a>
+      </div>
+      <div class="artist-card-follow">
+
+          <button class="am-Follow-button">+ SEGUIR</button>
+
+      </div>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 0%; top: 371px;">
+    <div class="artist-card">
+      <a href="/user/italo">
+        <div class="artist-card-info">
+          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_italo.jpg">
+          <div>
+            <p class="name uppercase">Italo AndreFlores Silva</p>
+            <p class="city">Lima, PE</p>
+            <p class="stats"><i class="bi_ecommerce-diamon"></i> 0</p>
+          </div>
+        </div>
+      </a>
+      <div class="artist-card-works">
+            <a href="/user/italo/work/el-ultimo-árbol" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/8f160763bd9a89e1ff975e1a9be4ebc9.jpg')"></a>
+            <a href="/user/italo/work/ciudad-y-naturaleza" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/f30481d3fd3feab3274252640d73d717.jpg')"></a>
+            <a href="/user/italo/work/guardian" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/588f505e8432f4ac6f2a4ce8f0e1b8f4.jpg')"></a>
+            <a href="/user/italo/work/mostro" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/daf4da3a943b72ddbf9f89c2cbd853bb.jpg')"></a>
+      </div>
+      <div class="artist-card-follow">
+
+          <button class="am-Follow-button">+ SEGUIR</button>
+
+      </div>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 371px;">
+    <div class="artist-card">
+      <a href="/user/andrecor92">
+        <div class="artist-card-info">
+          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_andrecor92.jpg">
+          <div>
+            <p class="name uppercase">AndréCoronado Mendoza</p>
+            <p class="city">, PE</p>
+            <p class="stats"><i class="bi_ecommerce-diamon"></i> 0</p>
+          </div>
+        </div>
+      </a>
+      <div class="artist-card-works">
+            <a href="/user/andrecor92/work/the-cell-man" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/781ecaa261da7231441789bd72a70b77.jpg')"></a>
+            <a href="/user/andrecor92/work/love" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/8ba204ecff45f768c783d4a2e60b8b6d.jpg')"></a>
+            <a href="/user/andrecor92/work/love" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/ac4ad656b2a4d8dfd1a4b060184fe977.jpg')"></a>
+            <a href="/user/andrecor92/work/party-cat" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/aba6fe3a14b886938708048baa42db6e.jpg')"></a>
+      </div>
+      <div class="artist-card-follow">
+
+          <button class="am-Follow-button">+ SEGUIR</button>
+
+      </div>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 371px;">
+    <div class="artist-card">
+      <a href="/user/luisangelartista">
+        <div class="artist-card-info">
+          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_luisangelartista.jpg">
+          <div>
+            <p class="name uppercase">LuisPeregrino Parihuaman</p>
+            <p class="city">Lima , PE</p>
+            <p class="stats"><i class="bi_ecommerce-diamon"></i> 0</p>
+          </div>
+        </div>
+      </a>
+      <div class="artist-card-works">
+            <a href="/user/luisangelartista/work/la-musa-adorada" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/54c48c040811a6fe8fce002d2f794e0a.jpg')"></a>
+            <a href="/user/luisangelartista/work/cabra-skater" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/3dcea2cfbce8e082e5f29d325fb2f2c7.jpg')"></a>
+            <a href="/user/luisangelartista/work/sipan-surreal" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/178a2850a2eb6cefda15824fc4068a56.jpg')"></a>
+            <a href="/user/luisangelartista/work/peru-cartoon" class="artist-card-work" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/694ce3a62f2a45ab0bd17fb481b599b2.jpg')"></a>
+      </div>
+      <div class="artist-card-follow">
+
+          <button class="am-Follow-button">+ SEGUIR</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="grid work-layout-discover" style="position: relative; height: 916px;">
+	<div class="grid-sizer"></div>
+	<div class="grid-item" style="position: absolute; left: 0%; top: 0px;">
+    <div class="work-card">
+      <div class="featured">AM</div>
+      <a href="/user/esteve/work/un-homenatge-a-antoni-gaudí">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/5ec42564e870b384e42f44af695fbf67.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 0%; top: 130px;">
+    <div class="work-card">
+      <a href="/user/jugogastrico/work/tributo-rob-zombie-los-renegados-del-diablo">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/6e32d4d1e3917831b07e4f0e53faea90.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 0%; top: 347px;">
+    <div class="work-card">
+      <a href="/user/mucho/work/the-cat-amp;-the-shining-reindeer">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/4830c2a53b077c81c51e11644f46acf2.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 0px;">
+    <div class="work-card">
+      <a href="/user/juanjo/work/mujer-lo-mas-hermoso">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/3e73a4dacba11f0e7e5a7d28b3b81844.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 128px;">
+    <div class="work-card">
+      <a href="/user/dnizr183/work/sin-titulo">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/32673190684dac5213958358c9bd8535.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 0px;">
+    <div class="work-card">
+      <a href="/user/davidpimentel/work/elefante">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/e0fd65a898b91ee0d1ecdaa0f8d331e8.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 363px;">
+    <div class="work-card">
+      <a href="/user/belu_ge/work/nada-como-ir-juntos-a-la-par">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/15c30cd6b6e585263d7fcf84c434ec97.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 378px;">
+    <div class="work-card">
+      <a href="/user/flordemariapadilla/work/pequeño-arlequin">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/2d7f0e5a4c747ac1041aac89daf9563d.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 0%; top: 774px;">
+    <div class="work-card">
+      <a href="/user/esteve/work/colorfant">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/c62282d50a94e21648d8c09522ccb249.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 212px;">
+    <div class="work-card">
+      <a href="/user/diegorossell/work/no-se-roben-mi-pais">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/a930db361c53f8b2a1606545d37524b1.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 679px;">
+    <div class="work-card">
+      <a href="/user/salimablack/work/guerrero-de-la-paz">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/f6b270d9b26d798826e1a0fc0fa8419a.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 460px;">
+    <div class="work-card">
+      <a href="/user/faber/work/niño-jugando-al-trompo">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/4bfc7551ebb2d60976e19a4629037b60.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 0%; top: 559px;">
+    <div class="work-card">
+      <a href="/user/raulpazos/work/tigre">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/7d81a2e9dd91d117054ffa29fdb73324.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 588px;">
+    <div class="work-card">
+      <a href="/user/morrizconcept/work/arturo-zambo-cavero">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/28ba723927abca1d95cc8ef65f1e8bc3.jpg">
+      </a>
+    </div>
+  </div>
+  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 570px;">
+    <div class="work-card">
+      <a href="/user/jugogastrico/work/la-banda-del-choclito">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/69eab3a51a0321b406c1f5244b569f14.jpg">
+      </a>
+    </div>
+  </div>
+ </div>
+
+{% endblock %}
+
+
+{% block scripts %}
+
+	<script>
+
+		// var users =
+  	new APP.Viewer('user', $('.grid'), null, more);
+
+	</script>
+
 {% endblock %}
