antes de pulear

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -2,7 +2,13 @@
 
 {% block elements %}
 
-
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="categories">
+				<div class="categorie"></div>
+			</div>
+		</div>
+	</div>
 
 
 <div class="grid work-layout-discover" style="position: relative; height: 1855px;">
