viewers for home

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -282,8 +282,7 @@
 
 	<script>
 
-		// var users =
-  	new APP.Viewer('user', $('.grid'), null, more);
+  	new APP.Viewer('user', $('.grid'), null, {{users|json|safe}});
 
 	</script>
 
