--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -11,7 +11,7 @@
 	</div>
 
 
-<div class="grid work-layout-discover" style="position: relative; height: 1855px;">
+<!-- <div class="grid work-layout-discover" style="position: relative; height: 1855px;">
 	<div class="grid-sizer"></div>
 	<div class="grid-item" style="position: absolute; left: 0%; top: 0px;">
     <div class="artist-card">
@@ -163,117 +163,22 @@
       </div>
     </div>
   </div>
+</div> -->
+
+<div class="discover-content grid-container u-padding-top-10 u-padding-bottom-40" data-state="expand">
+	<div class="grid-100 grid-parent">
+		<div class="grid work-layout-discover">
+			<div class="grid-sizer"></div>
+		</div>
+		<div class="am-search-result empty-message hide">
+			No se encontraron resultados
+			<br><br>
+			<a href="/users/specialty/all/page-1" class="am-report-link blue" href="">Volver a todas los artistas</a>
+		</div>
+		<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+	</div>
 </div>
 
-<div class="grid work-layout-discover" style="position: relative; height: 916px;">
-	<div class="grid-sizer"></div>
-	<div class="grid-item" style="position: absolute; left: 0%; top: 0px;">
-    <div class="work-card">
-      <div class="featured">AM</div>
-      <a href="/user/esteve/work/un-homenatge-a-antoni-gaudí">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/5ec42564e870b384e42f44af695fbf67.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 0%; top: 130px;">
-    <div class="work-card">
-      <a href="/user/jugogastrico/work/tributo-rob-zombie-los-renegados-del-diablo">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/6e32d4d1e3917831b07e4f0e53faea90.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 0%; top: 347px;">
-    <div class="work-card">
-      <a href="/user/mucho/work/the-cat-amp;-the-shining-reindeer">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/4830c2a53b077c81c51e11644f46acf2.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 0px;">
-    <div class="work-card">
-      <a href="/user/juanjo/work/mujer-lo-mas-hermoso">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/3e73a4dacba11f0e7e5a7d28b3b81844.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 128px;">
-    <div class="work-card">
-      <a href="/user/dnizr183/work/sin-titulo">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/32673190684dac5213958358c9bd8535.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 0px;">
-    <div class="work-card">
-      <a href="/user/davidpimentel/work/elefante">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/e0fd65a898b91ee0d1ecdaa0f8d331e8.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 363px;">
-    <div class="work-card">
-      <a href="/user/belu_ge/work/nada-como-ir-juntos-a-la-par">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/15c30cd6b6e585263d7fcf84c434ec97.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 378px;">
-    <div class="work-card">
-      <a href="/user/flordemariapadilla/work/pequeño-arlequin">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/2d7f0e5a4c747ac1041aac89daf9563d.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 0%; top: 774px;">
-    <div class="work-card">
-      <a href="/user/esteve/work/colorfant">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/c62282d50a94e21648d8c09522ccb249.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 212px;">
-    <div class="work-card">
-      <a href="/user/diegorossell/work/no-se-roben-mi-pais">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/a930db361c53f8b2a1606545d37524b1.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 679px;">
-    <div class="work-card">
-      <a href="/user/salimablack/work/guerrero-de-la-paz">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/f6b270d9b26d798826e1a0fc0fa8419a.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 460px;">
-    <div class="work-card">
-      <a href="/user/faber/work/niño-jugando-al-trompo">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/4bfc7551ebb2d60976e19a4629037b60.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 0%; top: 559px;">
-    <div class="work-card">
-      <a href="/user/raulpazos/work/tigre">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/7d81a2e9dd91d117054ffa29fdb73324.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 66.5988%; top: 588px;">
-    <div class="work-card">
-      <a href="/user/morrizconcept/work/arturo-zambo-cavero">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/28ba723927abca1d95cc8ef65f1e8bc3.jpg">
-      </a>
-    </div>
-  </div>
-  <div class="grid-item" style="position: absolute; left: 33.1976%; top: 570px;">
-    <div class="work-card">
-      <a href="/user/jugogastrico/work/la-banda-del-choclito">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_300,d_am_avatar.jpg/works/69eab3a51a0321b406c1f5244b569f14.jpg">
-      </a>
-    </div>
-  </div>
- </div>
 
 {% endblock %}
 
@@ -281,6 +186,8 @@
 {% block scripts %}
 
 	<script>
+		var users = {{users|json|safe}}
+		console.log('users: ', users)
 
   	new APP.Viewer('user', $('.grid'), null, {{users|json|safe}});
 
