--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -186,11 +186,10 @@
 {% block scripts %}
 
 	<script>
-		var users = {{users|json|safe}}
-		console.log('users: ', users)
-
-  	new APP.Viewer('user', $('.grid'), null, {{users|json|safe}});
-
+		$(function(){
+			var users = {{users|json|safe}}
+	  	new APP.Viewer('user', $('.grid'), null, {{users|json|safe}});
+		})
 	</script>
 
 {% endblock %}
