antes de pulear

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2556,9 +2556,39 @@ body
 
 	.inner
 		margin auto
-		// display flex
-		// align-items center
-		// justify-content center
+
+
+
+/*------------------------------------*
+	$ HOME
+*------------------------------------*/
+
+.home-title
+	font-family: 'Montserrat',sans-serif;
+	font-weight bold
+	color #333
+	font-size 14px
+	letter-spacing 1px
+
+.categories
+	display flex
+	flex-wrap: wrap;
+	.categorie-container
+		width 50%
+	.categorie
+		height 80px
+		margin 10px
+		color white
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 20px
+		color #fefefe
+		display flex
+		// cursor pointer
+		background-size: cover;
+		background-position: center center;
+		p
+			margin auto
 
 
 @keyframes load
