--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -2,13 +2,85 @@
 
 {% block elements %}
 
+
+
+
+
+	<!-- CATEGORIAS -->
+
 	<div class="grid-container">
 		<div class="grid-100">
+			<p class="home-title">DESCUBRE POR CATEGORÍAS</p>
+		</div>
+	</div>
+
+	<div class="grid-container">
+		<div class="grid-100 grid-parent">
 			<div class="categories">
-				<div class="categorie"></div>
+				<div class="categorie-container">
+					<a href="#" class="categorie" style="background-image: url('img/categories/1 pintura.png');">
+						<p>pintura</p>
+					</a>
+				</div>
+				<div class="categorie-container">
+					<a href="#" class="categorie" style="background-image: url('img/categories/2 arte urbano.png');">
+						<p>arte</p>
+					</a>
+				</div>
+				<div class="categorie-container">
+					<a href="#" class="categorie" style="background-image: url('img/categories/3 dibujo.png');">
+						<p>dibujo</p>
+					</a>
+				</div>
+				<div class="categorie-container">
+					<a href="#" class="categorie" style="background-image: url('img/categories/4 digital.png');">
+						<p>digital</p>
+					</a>
+				</div>
+				<div class="categorie-container">
+					<a href="#" class="categorie" style="background-image: url('img/categories/5 collage.png');">
+						<p>collage</p>
+					</a>
+				</div>
+				<div class="categorie-container">
+					<a href="#" class="categorie" style="background-image: url('img/categories/6 collage.png');">
+						<p>escultura</p>
+					</a>
+				</div>
+				<div class="categorie-container">
+					<a href="#" class="categorie" style="background-image: url('img/categories/7 collage.png');">
+						<p>fotogragia</p>
+					</a>
+				</div>
+				<div class="categorie-container">
+					<a href="#" class="categorie" style="background-image: url('img/categories/8 collage.png');">
+						<p>ilustracion</p>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
+
+
+
+	<!-- ARTISTAS -->
+
+	<div class="grid-container">
+		<div class="grid-100">
+			<p class="home-title">ARTISTAS DESTACADOS</p>
+		</div>
+	</div>
+
+
+
+	<!-- OBRAS -->
+
+	<div class="grid-container">
+		<div class="grid-100">
+			<p class="home-title">OBRAS DESTACADAS DE LA SEMANA</p>
+		</div>
+	</div>
+
 
 
 <!-- <div class="grid work-layout-discover" style="position: relative; height: 1855px;">
