--- a/app/views/partials/elements/user.html
+++ b/app/views/partials/elements/user.html
@@ -23,7 +23,10 @@
       <div class="artist-card-works">
         <% _.each([0,1,2,3], function(i) { %>
           <% if(Works[i] && Works[i].photo) { %>
-            <a href="/user/<%=username%>/work/<%=Works[i].nameSlugify%>" class="artist-card-work" style="background-image: url('<%= addFilter(Works[i].photo, 'w_120,h_120,c_fill') %>')"></a>
+            <a href="/user/<%=username%>/work/<%=Works[i].nameSlugify%>" class="artist-card-work">
+              <div  style="background-image: url('<%= addFilter(Works[i].photo, 'w_120,h_120,c_fill') %>')">
+              </div>
+            </a>
           <% } else { %>
             <div class="artist-card-work empty"></div>
           <% } %>
