--- a/app/views/errors/404.html
+++ b/app/views/errors/404.html
@@ -9,7 +9,7 @@
 			<p class="title">Lo setimos pagina no encontrada</p>
 
 			<p class="desc">Pero existen cientos de obras aún por descubrir</p>
-			<a href="">DESCRUBRIR OBRAS</a>
+			<a href="/works/category/all/page-1/">DESCRUBRIR OBRAS</a>
 		</div>
 	</div>
 
