add dark essage in home

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -2,18 +2,35 @@
 
 {% block elements %}
 
+	<!-- SLIDER HOME -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="slider"></div>
+		</div>
+	</div>
 
-
+	<!-- DARK MESSAGE -->
+	<div class="home-dark-message u-padding-top-15 u-padding-bottom-15">
+		<div class="grid-container">
+			<div class="grid-100">
+				<div class="inner">
+					<p class="title">PROMOCIONA TU ARTE</p>
+					<p class="subtitle">Unete a más de 1,500 creadores en la primera red social de artistas de Latinoamérica</p>
+					<a href="#">UNIRME</a>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 	<!-- CATEGORIAS -->
-	<div class="grid-container">
+	<div class="grid-container u-margin-top-30">
 		<div class="grid-100">
 			<p class="home-title">DESCUBRE POR CATEGORÍAS</p>
 		</div>
 	</div>
 
-	<div class="grid-container u-padding-bottom-40">
+	<div class="grid-container u-padding-top-10">
 		<div class="grid-100 grid-parent">
 			<div class="categories">
 				<div class="categorie-container">
@@ -60,15 +77,26 @@
 		</div>
 	</div>
 
+	<div class="grid-container u-margin-top-10">
+		<div class="grid-100">
+			<a href="#" class="home-more-link">VER TODAS LAS OBRAS ></a>
+		</div>
+	</div>
+
+	<div class="grid-container u-margin-top-30">
+		<div class="grid-100">
+			<div class="u-separator"></div>
+		</div>
+	</div>
 
 	<!-- ARTISTAS -->
-	<div class="grid-container">
+	<div class="grid-container u-margin-top-30">
 		<div class="grid-100">
 			<p class="home-title">ARTISTAS DESTACADOS</p>
 		</div>
 	</div>
 
-	<div class="grid-container u-padding-top-10 u-padding-bottom-40" data-state="reduce">
+	<div class="grid-container u-padding-top-15" data-state="reduce">
 		<div class="grid-100 grid-parent">
 			<div class="grid work-layout-discover">
 				<div class="grid-sizer"></div>
@@ -82,16 +110,27 @@
 		</div>
 	</div>
 
+	<div class="grid-container u-margin-top-10">
+		<div class="grid-100">
+			<a href="#" class="home-more-link">CONOCE A LOS ARTISTAS ></a>
+		</div>
+	</div>
+
+	<div class="grid-container u-margin-top-30">
+		<div class="grid-100">
+			<div class="u-separator"></div>
+		</div>
+	</div>
 
 	<!-- OBRAS -->
-	<div class="grid-container">
+	<div class="grid-container u-margin-top-30">
 		<div class="grid-100">
 			<p class="home-title">OBRAS DESTACADAS DE LA SEMANA</p>
 		</div>
 	</div>
 
 
-	<div class="grid-container u-padding-top-10 u-padding-bottom-40" data-state="expand">
+	<div class="grid-container u-padding-top-15" data-state="expand">
 		<div class="grid-100 grid-parent">
 			<div class="grid-works work-layout-discover">
 				<div class="grid-sizer"></div>
@@ -105,9 +144,9 @@
 		</div>
 	</div>
 
-	<div class="grid-container">
+	<div class="grid-container u-margin-top-20">
 		<div class="grid-100">
-			<a class="am-More-button">I need more</a>
+			<a href="#" class="am-More-button">Quiero ver más cosas geniales</a>
 		</div>
 	</div>
 
