--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2573,6 +2573,49 @@ body
 	font-size 14px
 	letter-spacing 1px
 
+.home-more-link
+	font-family: 'Montserrat',sans-serif;
+	font-size 14px
+	color #333
+	text-align right
+	display block
+	letter-spacing 1px
+
+.home-dark-message
+	background charcoal-grey
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 11px
+		color #fefefe
+		letter-spacing 1.5px
+	.subtitle
+		font-family: 'PT Serif', serif;
+		color #fefefe
+		font-size 14px
+		letter-spacing 1px
+		padding 10px 0
+	a
+		background #3bd64a
+		color white
+		font-size 10px
+		padding 7px 60px
+		border-radius 100px
+		display inline-block
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		letter-spacing 2px
+
+@media (min-width: 1015px)
+	.home-dark-message
+		.inner
+			display flex
+			align-items center
+		.subtitle
+			flex 1
+			text-align center
+
+
 .categories
 	display flex
 	flex-wrap: wrap;
