new dark message layour

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2583,6 +2583,8 @@ body
 
 .home-dark-message
 	background charcoal-grey
+	.inner
+		padding 25px 0
 	.title
 		font-family: 'Montserrat',sans-serif;
 		font-weight bold
@@ -2595,6 +2597,7 @@ body
 		font-size 14px
 		letter-spacing 1px
 		padding 10px 0
+		line-height 1.25
 	a
 		background #3bd64a
 		color white
@@ -2611,6 +2614,7 @@ body
 		.inner
 			display flex
 			align-items center
+			padding 10px 0
 		.subtitle
 			flex 1
 			text-align center
