--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -10,7 +10,7 @@
 	</div>
 
 	<!-- DARK MESSAGE -->
-	<div class="home-dark-message u-padding-top-15 u-padding-bottom-15">
+	<div class="home-dark-message">
 		<div class="grid-container">
 			<div class="grid-100">
 				<div class="inner">
