add gray message in home

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -151,6 +151,19 @@
 	</div>
 
 
+	<!-- GRAY MESSAGE -->
+	<div class="home-gray-message u-margin-top-60 u-padding-top-40 u-padding-bottom-40">
+		<div class="grid-container">
+			<div class="grid-100">
+				<div class="inner">
+					<p class="title">Regístrate y descubre cada día arte curado especialmente para tí</p>
+					<a href="#">REGISTRARME</a>
+					<p class="subtitle">Aprende más sobre qué es artemanfiesto.com</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 {% endblock %}
 
 
