--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2657,6 +2657,36 @@ body
 		.categorie
 			height 120px
 
+.home-gray-message
+	background #eee
+	.inner
+		max-width 500px
+		margin auto
+		text-align center
+	.title
+		color #3f3f3f
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 24px
+		line-height 1.25
+	.subtitle
+		line-height 1.15
+		color #61565a
+		font-family: 'Montserrat',sans-serif;
+		font-size 18px
+	a
+		background #3bd64a
+		color white
+		font-size 10px
+		padding 7px 50px
+		border-radius 100px
+		display inline-block
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		letter-spacing 2px
+		margin 20px 0
+
+
 @keyframes load
 	0%
 		transform rotate(0)
