add discover navigation texts

--- a/app/views/pages/collections.html
+++ b/app/views/pages/collections.html
@@ -46,7 +46,10 @@
 				</div>
 			</div>
 			<div class="text">
-				<p class="am-navigation-text">{{data.filters.currentCategory}}</p>
+				<p class="am-navigation-text category-text">{{data.filters.currentCategory}}</p>
+				<p class="am-navigation-text order-text">{{data.filters.currentOrder}}</p>
+				<p class="am-navigation-text search-text hide">incas</p>
+				<p class="am-navigation-text featured-text hide">AM</p>
 			</div>
 			<div class="filter right" data-state="closed">
 				<div class="am-Select">
