--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -48,8 +48,8 @@
 			<div class="text">
 				<p class="am-navigation-text category-text">{{data.filters.currentCategory}}</p>
 				<p class="am-navigation-text order-text">{{data.filters.currentOrder}}</p>
-				<p class="am-navigation-text search-text">incas</p>
-				<p class="am-navigation-text featured-text">AM</p>
+				<p class="am-navigation-text search-text hide">incas</p>
+				<p class="am-navigation-text featured-text hide">AM</p>
 			</div>
 			<div class="filter right" data-state="closed">
 				<div class="am-Select">
