--- a/app/views/partials/banner.html
+++ b/app/views/partials/banner.html
@@ -10,7 +10,7 @@
 					<div class="am-Search-input">
 						<input type="text"/>
 						<!-- <i class="fa fa-search"></i> -->
-						<i class="bi_interface-search"></i>
+						<i class="bi_interface-search search-btn"></i>
 					</div>
 				</div>
 			</div>
