--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -6,9 +6,9 @@
 
 	<title>Arte Manifiesto</title>
 
-	<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<!-- <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'> -->
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 
 	<link rel="stylesheet" href="/chosen.css">
 	<link rel="stylesheet" href="/css/budicon.css">
