add confirm in delete work

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -532,6 +532,18 @@ body
 	// background rgba(black, .5)
 	cursor pointer
 
+.confirm
+	position absolute
+	bottom 10px
+	right 5px
+	color white
+	background rgba(black, .5)
+	border-radius 4px
+	padding 5px
+	font-family 'Montserrat', sans-serif
+	span
+		font-size 11px
+
 .edit
 	font-size 1.15em
 	position absolute
